--- a/slide/xaringan-themer.css
+++ b/slide/xaringan-themer.css
@@ -44,20 +44,20 @@
 
   /* Colors */
   --text-color: #272822;
-  --header-color: #000F46;
+  --header-color: #035AA6;
   --background-color: #FFFFFF;
-  --link-color: #000F46;
-  --text-bold-color: #000F46;
+  --link-color: #035AA6;
+  --text-bold-color: #035AA6;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #FFFFFF;
-  --inverse-background-color: #000F46;
+  --inverse-background-color: #035AA6;
   --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #000F46;
-  --title-slide-background-color: #000F46;
+  --inverse-link-color: #035AA6;
+  --title-slide-background-color: #035AA6;
   --title-slide-text-color: #FFFFFF;
-  --header-background-color: #000F46;
+  --header-background-color: #035AA6;
   --header-background-text-color: #FFFFFF;
-  --base: #000F46;
+  --base: #035AA6;
   --white: #FFFFFF;
   --black: #272822;
 }
@@ -100,10 +100,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #000F46;
+  color: #035AA6;
 }
 .remark-slide-number {
-  color: #000F46;
+  color: #035AA6;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -151,10 +151,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #000F4699;
+  color: #035AA699;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #000F46;
+  color: #035AA6;
 }
 .right-column {
   width: 75%;
@@ -176,7 +176,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #000F4680;
+  border-left: solid 5px #035AA680;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -193,7 +193,7 @@ th, td {
 .remark-slide table:not(.table-unshaded) thead,
 .remark-slide table:not(.table-unshaded) tfoot,
 .remark-slide table:not(.table-unshaded) tr:nth-child(even) {
-  background: #CCCFDA;
+  background: #CCDEED;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -203,7 +203,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #CCCFDA;
+  background-color: #CCDEED;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
